# fuz

./: CLAUDE.md  Cargo.toml  Makefile  README.md
src/: main.rs  matcher.rs  printer.rs  stats.rs  topk.rs  walker.rs
