[package]
name = "fuz"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "fuz"
path = "src/main.rs"

[dependencies]
ignore = "0.4"
lexopt = "0.3"
memchr = "2.7"
mimalloc = { version = "0.1", default-features = false }
libc = "0.2"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
